# stock-analysis-mcp

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: lint.yml  unit-tests.yml
src/stock_analysis/: __init__.py  server.py
src/stock_analysis/tools/: __init__.py  dividend_history.py  dma.py  ema.py  peer_companies.py  price_history.py  quarterly_results.py  shareholding_pattern.py  support_resistance.py  ticker_lookup.py  valuation_history.py
src/stock_analysis/utils/: __init__.py  country_exchange.py  yfinance_client.py
tests/: conftest.py
tests/tools/: test_dividend_history.py  test_dma.py  test_ema.py  test_peer_companies.py  test_price_history.py  test_quarterly_results.py  test_shareholding_pattern.py  test_support_resistance.py  test_ticker_lookup.py  test_valuation_history.py
tests/utils/: test_country_exchange.py  test_yfinance_client.py
