[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-analysis-mcp"
version = "0.1.0"
description = "A Python MCP server for stock analysis using yfinance"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.4.0",
    "yfinance>=0.2.50",
    "pandas>=2.0.0",
    "numpy>=1.26.0",
    "scipy>=1.11.0",
]

[project.scripts]
stock-analysis-mcp = "stock_analysis.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
